--- a/login.html
+++ b/login.html
@@ -75,10 +75,10 @@ text-align: center;
         <input type="password" id="lname" name="lname">
 
         <div style="padding-top: 10px;">
-    <a class="navbar-brand"  href="./index.html" >
-        
-        <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">login</button>
-    </a>
+            <a href="loginhome.html">
+
+                <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">login</button>
+            </a>
         </div>
         </form>  
         <p>
