--- a/loginhome.html
+++ b/loginhome.html
@@ -196,13 +196,8 @@
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li style="padding-right: 20px;">
-          <a href="create.html" style="color: azure;"
-            ><span class="glyphicon glyphicon-user"></span> Sign Up</a
-          >
-        </li>
-        <li style="padding-right: 10px;">
-          <a href="login.html" style="color: azure;"
-            ><span class="glyphicon glyphicon-log-in"></span> Login</a
+          <a href="index.html" style="color: azure;"
+            ><span class="glyphicon glyphicon-user"></span>Logout</a
           >
         </li>
       </ul>
