--- a/results.html
+++ b/results.html
@@ -196,79 +196,62 @@
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li style="padding-right: 20px;">
-          <a href="create.html" style="color: azure;"
-            ><span class="glyphicon glyphicon-user"></span> Sign Up</a
-          >
-        </li>
-        <li style="padding-right: 10px;">
-          <a href="login.html" style="color: azure;"
-            ><span class="glyphicon glyphicon-log-in"></span> Login</a
+          <a href="index.html" style="color: azure;"
+            ><span class="glyphicon glyphicon-user"></span>Logout</a
           >
         </li>
       </ul>
     </nav>
 
-    <div
-      class="jumbotron text-center"
-      style="
-        padding: 20px;
-        background: linear-gradient(to bottom, #66ccff 0%, #ff99cc 100%);
-      "
-    >
-      <div style="border: 2px solid black; color: black;">
-        <h1><b>National Health Schemes Portal</b></h1>
-        <p>We care about your health</p>
-      </div>
-    </div>
-    <div class="border border-light p-3 mb-4">
-      <div class="text-center">
-        <a href="schemes.html">
-          <button type="button" class="btn btn-warning btn-lg">
-            Find Schemes!
-          </button>
-        </a>
+    <div>
+      <div class="m-5">
+        <div class="text-center">
+          <h1>AAROGYASRI HEALTH SCHEME</h1>
+        </div>
+        <ul id="myUL">
+          <li class="list-group-item list-group-item-primary">
+            <b> Apollo Hospitals Enterprises Ltd Jubilee Hills , APOL-JBL</b>
+            <ul>
+              <li>S7.CARDIAC AND CARDIOTHORACIC SURGERY,</li>
+              <li>
+                S11.SURGICAL ONCOLOGY
+              </li>
+              <li>
+                S12.MEDICAL ONCOLOGY
+              </li>
+            </ul>
+          </li>
+          <li class="list-group-item list-group-item-success">
+            <b>Kamineni Hospitals Pvt Ltd , KWDT-LBN</b>
+            <ul>
+              <li>
+                S11.SURGICAL ONCOLOGY
+              </li>
+              <li>
+                S12.MEDICAL ONCOLOGY
+              </li>
+              <li>
+                S13.RADIATION ONCOLOGY
+              </li>
+            </ul>
+          </li>
+
+          <!-- <li class="list-group-item list-group-item-info">
+            <b>Scheme 4</b>
+
+          </li>
+
+          <li class="list-group-item list-group-item-dark">
+            A simple dark list group item
+          </li>
+        </ul> -->
+        </ul>
       </div>
     </div>
 
-    <div id="demo" class="carousel slide text-center" data-interval="true">
-      <ul class="carousel-indicators">
-        <li data-target="#demo" data-slide-to="0" class="active"></li>
-        <li data-target="#demo" data-slide-to="1" class=""></li>
-        <li data-target="#demo" data-slide-to="2" class=""></li>
-      </ul>
-      <div class="carousel-inner">
-        <div class="carousel-item carousel-item-next carousel-item-left">
-          <img src="11.jpg" alt="Los Angeles" width="1100" height="500" />
-          <div class="carousel-caption">
-            <h3>help people</h3>
-            <p>share among..</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="12.jpg" alt="Chicago" width="1100" height="500" />
-          <div class="carousel-caption">
-            <h3>we are with you</h3>
-            <p>we care for you!</p>
-          </div>
-        </div>
-        <div class="carousel-item active carousel-item-left">
-          <img src="indaia_he.jpg" alt="New York" width="1100" height="500" />
-          <div class="carousel-caption">
-            <h3>we work for you</h3>
-            <p>let's make it big</p>
-          </div>
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#demo" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </a>
-      <a class="carousel-control-next" href="#demo" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </a>
-    </div>
     <div>
       <h2 style="text-align: center;">
-        Book an appointment with docter
+        Book an appointment with doctor
       </h2>
       <form action="#">
         <div class="container">
@@ -301,73 +284,6 @@
           <button type="submit" class="registerbtn">Register</button>
         </div>
       </form>
-    </div>
-
-    <div class="container" style="margin-top: 30px;">
-      <div class="row">
-        <div class="col-sm-4">
-          <h2>About us</h2>
-          <h5>THIS IS US</h5>
-          <div class="fakeimg">Fake Image</div>
-          <p>
-            The Ministry of Health and Family Welfare, Government of India has
-            set up the National Health Portal in pursuance to the decisions of
-            the National Knowledge Commission, to provide healthcare related
-            information to the citizens of India and to serve as a single point
-            of access for consolidated health information. The National
-            Institute of Health and Family Welfare (NIHFW) has established
-            Centre for Health Informatics to be the secretariat for managing the
-            activities of the National Health Portal. Detailed Project Report of
-            NHP for PSC meeting Reconstituted Steering Committee (10th July
-            2014). Order constituting Steering Committee Working Group Members
-            for preparing the DPR of NHP Minutes of the meeting of Group for
-            Search cum Selection Committee (16th April, 2012).
-          </p>
-          <h3>Things to know</h3>
-          <p>Explore</p>
-          <ul class="nav nav-pills flex-column">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Active schemes</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">apply for schemes</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Help from government</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-          </ul>
-          <hr class="d-sm-none" />
-        </div>
-        <div class="col-sm-8">
-          <h2>Goal</h2>
-          <h5>Our goal, jun 20,2020</h5>
-          <div class="fakeimg">this</div>
-          <p></p>
-          <p>
-            The National Health Portal aims to make this as a single point
-            access for authenticated health information for citizens, students,
-            healthcare professionals and researchers. Mission The National
-            Health Portal will achieve the above vision by collecting, verifying
-            and disseminating health and health care delivery services related
-            information for all citizens of India.
-          </p>
-          <br />
-          <h2>Team Working</h2>
-          <h5>Title description, Sep 2, 2020</h5>
-          <div class="fakeimg">Fake Image</div>
-          <p>Team</p>
-          <p>
-            This the team AKKA
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="jumbotron text-center" style="margin-bottom: 0;">
-      <p>Copyrights under telangana Jurisdiction</p>
     </div>
   </body>
 </html>
