--- a/results.html
+++ b/results.html
@@ -280,10 +280,13 @@
             By submitting the details you agree to our
             <a href="#">Terms & Privacy</a>.
           </p>
-
-          <button type="submit" class="registerbtn">Register</button>
         </div>
       </form>
+      <div class="container">
+        <a href="./success.html">
+          <button type="submit" class="registerbtn">Register</button>
+        </a>
+      </div>
     </div>
   </body>
 </html>
