--- a/appointment.html
+++ b/appointment.html
@@ -203,109 +203,43 @@
       </ul>
     </nav>
 
-    <div>
+    <!-- <div>
       <div class="m-5">
-        <div class="text-center m-5">
+        <div class="text-center">
           <h1>AAROGYASRI HEALTH SCHEME</h1>
         </div>
         <ul id="myUL">
           <li class="list-group-item list-group-item-primary">
-            <div class="row">
-              <div class="col-10">
-                <b>
-                  Apollo Hospitals Enterprises Ltd Jubilee Hills , APOL-JBL</b
-                >
-                <ul>
-                  <li>S7.CARDIAC AND CARDIOTHORACIC SURGERY,</li>
-                  <li>
-                    S11.SURGICAL ONCOLOGY
-                  </li>
-                  <li>
-                    S12.MEDICAL ONCOLOGY
-                  </li>
-                </ul>
-              </div>
-              <div class="col">
-                <a href="./appointment.html">
-                  <button type="submit" class="registerbtn">Book</button>
-                </a>
-              </div>
-            </div>
+            <b> Apollo Hospitals Enterprises Ltd Jubilee Hills , APOL-JBL</b>
+            <ul>
+              <li>S7.CARDIAC AND CARDIOTHORACIC SURGERY,</li>
+              <li>
+                S11.SURGICAL ONCOLOGY
+              </li>
+              <li>
+                S12.MEDICAL ONCOLOGY
+              </li>
+            </ul>
           </li>
           <li class="list-group-item list-group-item-success">
-            <div class="row">
-              <div class="col-10">
-                <b>Kamineni Hospitals Pvt Ltd , KWDT-LBN</b>
-                <ul>
-                  <li>
-                    S11.SURGICAL ONCOLOGY
-                  </li>
-                  <li>
-                    S12.MEDICAL ONCOLOGY
-                  </li>
-                  <li>
-                    S13.RADIATION ONCOLOGY
-                  </li>
-                </ul>
-              </div>
-              <div class="col">
-                <a href="./appointment.html">
-                  <button type="submit" class="registerbtn">Book</button>
-                </a>
-              </div>
-            </div>
-          </li>
-          <li class="list-group-item list-group-item-primary">
-            <div class="row">
-              <div class="col-10">
-                <b> Gandhi Hospitals , GGH-HYD</b>
-                <ul>
-                  <li>
-                    S2.ENT SURGERY,
-                  </li>
-                  <li>
-                    S4.GYNAECOLOGY AND OBSTETRICS SURGERY
-                  </li>
-                  <li>
-                    S5.ORTHOPEDIC SURGERY AND PROCEDURES
-                  </li>
-                </ul>
-              </div>
-              <div class="col">
-                <a href="./appointment.html">
-                  <button type="submit" class="registerbtn">Book</button>
-                </a>
-              </div>
-            </div>
-          </li>
-          <li class="list-group-item list-group-item-success">
-            <div class="row">
-              <div class="col-10">
-                <b>Osmania General Hospital , OSM-HYD</b>
-                <ul>
-                  <li>
-                    S1.GENERAL SURGERY,
-                  </li>
-                  <li>
-                    S5.ORTHOPEDIC SURGERY AND PROCEDURES
-                  </li>
-                  <li>
-                    S6.SURGICAL GASTRO ENTEROLOGY
-                  </li>
-                </ul>
-              </div>
-              <div class="col">
-                <a href="./appointment.html">
-                  <button type="submit" class="registerbtn">Book</button>
-                </a>
-              </div>
-            </div>
+            <b>Kamineni Hospitals Pvt Ltd , KWDT-LBN</b>
+            <ul>
+              <li>
+                S11.SURGICAL ONCOLOGY
+              </li>
+              <li>
+                S12.MEDICAL ONCOLOGY
+              </li>
+              <li>
+                S13.RADIATION ONCOLOGY
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
-    </div>
+    </div> -->
 
-    <!-- <div class="mt-5">
+    <div class="mt-5">
       <h2 style="text-align: center;">
         Book an appointment with doctor
       </h2>
@@ -353,6 +287,6 @@
           <button type="submit" class="registerbtn">Book</button>
         </a>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
