--- a/schemes.html
+++ b/schemes.html
@@ -191,6 +191,75 @@
         </a>
       </div>
 
+      <div
+        class="container text-left pt-5 pb-3 mb-5"
+        style="background-color: #88ece7;"
+      >
+        <h3>
+          Advanced Search
+        </h3>
+        <div class="m-5 pt-1 row">
+          <div class="col-6">
+            <label for="psw"><b> Scheme</b></label>
+            <select name="cars" id="cars">
+              <option value="volvo">AAROGYASRI HEALTH SCHEME </option>
+              <option value="saab">Bhadratha AP Police SCHEME </option>
+              <option value="mercedes">SCHEME 3 </option>
+              <option value="audi">SCHEME 4 </option>
+            </select>
+          </div>
+          <div class="col-6">
+            <label for="psw"><b> Location</b></label>
+            <select name="cars" id="cars">
+              <option value="volvo">Hyderabad</option>
+              <option value="saab">Secendrabad</option>
+              <option value="mercedes">Tarnaka</option>
+              <option value="audi">Begumpet</option>
+            </select>
+          </div>
+          <div class="col-6">
+            <label for="psw"><b> District</b></label>
+            <select name="cars" id="cars">
+              <option value="volvo">Hyderabad</option>
+            </select>
+          </div>
+          <div class="col-6">
+            <label for="psw"><b> Hospital</b></label>
+            <select name="cars" id="cars">
+              <option value="volvo"
+                >Apollo Hospitals Jubilee Hills , APOL-JBL
+              </option>
+              <option value="saab"
+                >Kamineni Hospitals Pvt Ltd , KWDT-LBN
+              </option>
+              <option value="mercedes">Gandhi Hospitals , GGH-HYD </option>
+              <option value="audi">Osmania General Hospital , OSM-HYD </option>
+            </select>
+          </div>
+          <div class="col-6">
+            <label for="psw"><b> Speciality</b></label>
+            <select name="cars" id="cars">
+              <option value="volvo"
+                >S7.CARDIAC AND CARDIOTHORACIC SURGERY,</option
+              >
+              <option value="saab">S11.SURGICAL ONCOLOGY</option>
+              <option value="mercedes">S12.MEDICAL ONCOLOGY</option>
+              <option value="audi">S13.RADIATION ONCOLOGY,</option>
+            </select>
+          </div>
+          <div class="col-6">
+            <label for="psw"><b> Patient Name</b></label>
+            <input type="text" placeholder="Patient Name" />
+          </div>
+          <div class="text-center col-12 mt-5">
+            <a href="./results.html">
+              <button type="button" class="btn btn-warning btn-lg ml-2">
+                Search
+              </button>
+            </a>
+          </div>
+        </div>
+      </div>
       <div class="row">
         <div class="col-5 text-center m-5">
           <ul id="myUL">
