search radius added

--- a/schemes.html
+++ b/schemes.html
@@ -248,6 +248,14 @@
             </select>
           </div>
           <div class="col-6">
+            <label for="psw"><b> Search Radius</b></label>
+            <select name="cars" id="cars">
+              <option value="volvo">1km</option>
+              <option value="saab">2km</option>
+              <option value="audi">3km</option>
+            </select>
+          </div>
+          <div class="col-6">
             <label for="psw"><b> Patient Name</b></label>
             <input type="text" placeholder="Patient Name" />
           </div>
